--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,6 +6,10 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: trustpoint_backend
 
+defaults:
+  run:
+    working-directory: ./app
+
 jobs:
   build-and-publish-image:
     runs-on: ubuntu-latest
@@ -49,7 +53,6 @@ jobs:
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
-        working-directory: ./backend
         id: build-and-push
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
