--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,10 +6,6 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: trustpoint_backend
 
-defaults:
-  run:
-    working-directory: ./backend
-
 jobs:
   build-and-publish-image:
     runs-on: ubuntu-latest
@@ -56,7 +52,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
-          context: .
+          context: backend
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
